# ProductOS

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  productos  promote-release  pyproject.toml  pytest.ini  validate-artifacts
internal/: README.md
scripts/: __init__.py  audit_v10_superpower_plan.py  export_presentation.py  export_workflow_corridor.py  presentation_export_pptx.mjs  productos.py  promote_release.py  run_with_supported_python.sh  validate_artifacts.py
templates/: README.md  workspace_manifest.yaml
tests/: conftest.py  test_artifact_schemas.py  test_component_consistency.py  test_customer_journey_living_system.py  test_customer_journey_rendering.py  test_customer_journey_synthesis.py  test_entities.py  test_feature_scorecard_assets.py  test_lifecycle_trace_assets.py  test_lifecycle_trace_execution.py  test_private_planning_boundary.py  test_productos_cli.py  test_release_promotion.py  test_skill_consistency.py  test_takeover.py  test_thread_review_runtime.py  test_user_journey_screen_flow.py  test_v10_audit.py  test_v10_cockpit_living_updates.py  test_v10_competitive_radar.py  test_v10_competitive_shift_analysis.py  test_v10_customer_journey.py  test_v10_decision_tree_construction.py  test_v10_drift_and_impact_propagation.py  test_v10_empathy_map.py  test_v10_export_pipeline.py  test_v10_health_dashboard_build.py  test_v10_hypothesis_portfolio_management.py  test_v10_living_document_renderer.py  test_v10_market_trend_extrapolation.py  test_v10_persona_narrative.py  test_v10_pestle_synthesis.py  (+54 more)
(+1464 files in other folders)
